[build-system]
requires = ["flit_core >=3.6,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plinky"
readme = "README.md"
authors = [
    {name="Amethyst Reese", email="amy@noswap.com"},
]
license = {file="LICENSE"}
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "click >= 8.0",
    "jinja2 >= 3.0",
    "markdown >= 3.0",
    "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "attribution==1.6.2",
    "black==23.1.0",
    "flake8==6.0.0",
    "flit==3.8.0",
    "mypy==1.0.1",
    "ufmt==2.0.1",
    "usort==1.0.5",
]
pretty = [
    "rich >= 13",
]

[project.scripts]
plinky = "plinky.__main__:main"

[project.urls]
Home = "https://github.com/amyreese/plinky"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "plinky"
package = "plinky"
version_file = true
ignored_authors = ["dependabot[bot]"]
signed_tags = true

[tool.mypy]
strict = true
